vytvorenie forgot password view a logiky forgot password

--- a/Neminaj/Views/ForgotPasswordView.xaml
+++ b/Neminaj/Views/ForgotPasswordView.xaml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Neminaj.Views.RegisterView"
-             Title="Registrácia">
+             x:Class="Neminaj.Views.ForgotPasswordView"
+             Title="Obnovenie hesla">
     <VerticalStackLayout Spacing="25" Padding="30,0" VerticalOptions="Center">
 
         <VerticalStackLayout Spacing="5">
             <Image Source="inflastoresplashscreen.png" HeightRequest="200" />
-            <Label Text="Registrácia" FontSize="28" TextColor="Gray" HorizontalTextAlignment="Center" />
+            <Label Text="Obnovenie hesla" FontSize="28" TextColor="Gray" HorizontalTextAlignment="Center" />
         </VerticalStackLayout>
 
         <StackLayout Orientation="Horizontal">
@@ -37,16 +37,7 @@
             </Frame>
         </StackLayout>
 
-        <StackLayout Orientation="Horizontal">
-            <Frame ZIndex="1" HasShadow="True" BorderColor="White" HeightRequest="56" WidthRequest="56" CornerRadius="28" HorizontalOptions="Fill">
-                <Image Source="slovakia_map.svg" HeightRequest="20" WidthRequest="20" />
-            </Frame>
-            <Frame HeightRequest="45" Margin="-20,0,0,0" Padding="0" HasShadow="True" BorderColor="White" HorizontalOptions="FillAndExpand">
-                <Picker x:Name="RegionPicker" Title="Zvoľte región" Margin="20,0,0,0" TextColor="Black" VerticalOptions="Center" SelectedIndexChanged="RegionPicker_SelectedIndexChanged" />
-            </Frame>
-        </StackLayout>
-
-        <Button x:Name="BtnRegisterHttps" Text="Registrovať" CornerRadius="20" HorizontalOptions="Center" Clicked="BtnRegisterHttps_Clicked" />
+        <Button x:Name="BtnForgotPasswordHTTPS" Text="Obnoviť heslo" CornerRadius="20" HorizontalOptions="Center" Clicked="BtnForgotPasswordHTTPS_Clicked" />
 
     </VerticalStackLayout>
 </ContentPage>
