--- a/Neminaj/AppShell.xaml
+++ b/Neminaj/AppShell.xaml
@@ -29,7 +29,7 @@
         </Tab>
 
         <Tab Title="Odhlásenie" Icon="settings.svg">
-            <ShellContent ContentTemplate="{DataTemplate localViews:SettingsView}" Route="SettingsView"/>
+            <ShellContent ContentTemplate="{DataTemplate localViews:LoginView}" Route="LoginView"/>
         </Tab>
 
     </TabBar>
