--- a/Neminaj/Views/SavedCardDetailView.xaml
+++ b/Neminaj/Views/SavedCardDetailView.xaml
@@ -8,13 +8,13 @@
         <ToolbarItem Text="Zmazať" IconImageSource="recycle_bin.svg" Clicked="ToolbarItemDelete_Clicked" />
     </ContentPage.ToolbarItems>
 
-    <Grid RowDefinitions="*,Auto" ColumnDefinitions="2">
+    <Grid RowDefinitions="*,Auto" ColumnDefinitions="*">
         <!--<Image Grid.ColumnSpan="2" Grid.Row="0" HorizontalOptions="Center" VerticalOptions="Center" Aspect="AspectFill"/>-->
-        <cv:BarcodeImage x:Name="CardCode" Grid.ColumnSpan="2" Grid.Row="0" 
+        <cv:BarcodeImage x:Name="BarcodeImage" Grid.Row="0" 
                          HorizontalOptions="Center" VerticalOptions="Center"
                          Aspect="AspectFill" BarcodeForeground="White" BarcodeBackground="Black" />
 
-        <Label x:Name="lblCardCode" Grid.ColumnSpan="2" Grid.Row="1" HorizontalOptions="Center" VerticalOptions="Center" />
+        <Label x:Name="lblCardCode" Grid.Row="1" HorizontalOptions="Center" VerticalOptions="Center" />
     </Grid>
 
 </ContentPage>
