--- a/Neminaj/Views/ItemPicker.xaml
+++ b/Neminaj/Views/ItemPicker.xaml
@@ -3,13 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:y="clr-namespace:Neminaj.ContentViews"
              x:Class="Neminaj.Views.ItemPicker"
-             NavigationPage.HasNavigationBar="False">
+             xmlns:toolkit="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+             Title="Výber položiek">
 
     <ContentPage.Content>
-        <ScrollView>
-            <VerticalStackLayout>
-                <y:NavigationBarMainPage x:Name="NavigationBarMainPage" MaximumHeightRequest="50" MaximumWidthRequest="50" BackgroundColor="Orange"/>
-                <Grid
+        <Grid>
+            <ScrollView>
+                <VerticalStackLayout>
+                    <Grid
         Padding="5"
         RowDefinitions="Auto, 0.15*, *"
         ColumnDefinitions="*, *" >
@@ -48,6 +49,43 @@
                 </Grid>
             </VerticalStackLayout>
         </ScrollView>
+            <Border x:Name="CartCounter"
+                    BackgroundColor="#E0662B"
+                    HorizontalOptions="End" 
+                    VerticalOptions="End" 
+                    Padding="30, 10" 
+                    StrokeShape="RoundRectangle 40"
+                    Margin="5"
+                    StrokeThickness="0">
+                <Border.Shadow>
+                    <Shadow Offset="1,1"
+                            Brush="#E0662B"
+                            Opacity="10"
+                            Radius="10" />
+                </Border.Shadow>
+                <Border.GestureRecognizers>
+                    <TapGestureRecognizer Tapped="CartCounter_TapGestureRecognizer_Tapped" />
+                </Border.GestureRecognizers>
+                <HorizontalStackLayout 
+                    HorizontalOptions="Center"
+                    VerticalOptions="Center"
+                    Spacing="10">
+                    <Image Source="cart.svg"
+                           HeightRequest="16"
+                           WidthRequest="16"
+                           Aspect="AspectFill">
+                        <Image.Behaviors>
+                            <toolkit:IconTintColorBehavior TintColor="White"/>
+                        </Image.Behaviors>
+                    </Image>
+                    <Label x:Name="lblCartCount"
+                           FontSize="16"
+                           TextColor="White"
+                           FontAttributes="Bold"
+                           Text="0"/>
+                </HorizontalStackLayout>
+            </Border>
+        </Grid>
     </ContentPage.Content>
 
 
