--- a/Neminaj/Views/CardsView.xaml
+++ b/Neminaj/Views/CardsView.xaml
@@ -20,12 +20,16 @@
             <CollectionView x:Name="listCards" Grid.Row="1" Grid.Column="0" BackgroundColor="Transparent" SelectionMode="Single" VerticalScrollBarVisibility="Always" SelectionChanged="listCards_SelectionChanged">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
-                        <Grid RowDefinitions="Auto, Auto" RowSpacing="15">
+                        <Grid RowDefinitions="Auto" RowSpacing="15">
                             <Frame>
-                                <HorizontalStackLayout Grid.Row="0" Spacing="50">
-                                    <Image Grid.Row="0" Source="{Binding CardImage, Mode=OneWay, Converter={StaticResource ByteArrayToImageSourceConverter}}" HeightRequest="75" WidthRequest="75" Aspect="AspectFit" HorizontalOptions="Center" VerticalOptions="Center" />
-                                    <Label Grid.Row="0" Text="{Binding Name}" HorizontalOptions="StartAndExpand" VerticalOptions="Center" LineBreakMode="WordWrap" FontAttributes="Bold" FontSize="Body"></Label>
-                                </HorizontalStackLayout>
+                                <Grid RowDefinitions="Auto" ColumnDefinitions="75, Auto">
+                                    <Image Grid.Row="0" Grid.Column="0" IsVisible="{Binding IsKnownCard}" Source="{Binding Image, Mode=OneWay, Converter={StaticResource ByteArrayToImageSourceConverter}}" HeightRequest="75" WidthRequest="75" Aspect="AspectFit" HorizontalOptions="Center" VerticalOptions="Center" />
+                                    <Frame Grid.Row="0" Grid.Column="0" BackgroundColor="{Binding UknownCardColor}" BorderColor="{Binding UknownCardColor}" HeightRequest="72" WidthRequest="72"/>
+                                    <Label Grid.Row="0" Grid.Column="1" Text="{Binding Name}" HorizontalOptions="StartAndExpand" VerticalOptions="Center" LineBreakMode="WordWrap" FontAttributes="Bold" FontSize="Body"></Label>
+                                </Grid>
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" CommandParameter="{Binding Id}"/>
+                                </Frame.GestureRecognizers>
                             </Frame>
                             <!--<Line  Grid.Row="1" Grid.ColumnSpan="2" BackgroundColor="DarkSlateGrey"></Line>-->
                         </Grid>
