--- a/Neminaj/Views/ChooseCardView.xaml
+++ b/Neminaj/Views/ChooseCardView.xaml
@@ -14,7 +14,7 @@
     <ScrollView>
         <Grid  Padding="5" RowDefinitions="Auto, *" ColumnDefinitions="*">
             <SearchBar  x:Name="SearchBar" IsEnabled="True" Grid.Row="1" Grid.Column="0" Placeholder="Hľadaj kartu" TextChanged="SearchBar_TextChanged" />
-            <CollectionView x:Name="listCards" Grid.Row="1" Grid.Column="0" BackgroundColor="Transparent" SelectionMode="Single" VerticalScrollBarVisibility="Always" SelectionChanged="listCards_SelectionChanged">
+            <CollectionView x:Name="listCards" Grid.Row="1" Grid.Column="0" BackgroundColor="Transparent" SelectionMode="Single" VerticalScrollBarVisibility="Always">
                 <CollectionView.ItemTemplate>
                     <DataTemplate>
                         <Grid RowDefinitions="Auto, Auto" RowSpacing="15">
@@ -23,6 +23,9 @@
                                     <Image Grid.Row="0" Source="{Binding CardImage, Mode=OneWay, Converter={StaticResource ByteArrayToImageSourceConverter}}" HeightRequest="75" WidthRequest="75" Aspect="AspectFit" HorizontalOptions="Center" VerticalOptions="Center" />
                                     <Label Grid.Row="0" Text="{Binding Name}" VerticalOptions="Center" LineBreakMode="WordWrap" FontAttributes="Bold" FontSize="Body" ></Label>
                                 </HorizontalStackLayout>
+                                <Frame.GestureRecognizers>
+                                    <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped" CommandParameter="{Binding .}" />
+                                </Frame.GestureRecognizers>
                             </Frame>
                             <!--<Line  Grid.Row="1" Grid.ColumnSpan="2" BackgroundColor="DarkSlateGrey"></Line>-->
                         </Grid>
