--- a/Neminaj/Views/RegisterView.xaml
+++ b/Neminaj/Views/RegisterView.xaml
@@ -12,7 +12,7 @@
 
         <StackLayout Orientation="Horizontal">
             <Frame ZIndex="1" HasShadow="True" BorderColor="White" HeightRequest="56" WidthRequest="56" CornerRadius="28" HorizontalOptions="Fill">
-                <Image Source="user_login.svg" HeightRequest="20" WidthRequest="20" />
+                <Image Source="user_login.png" HeightRequest="20" WidthRequest="20" />
             </Frame>
             <Frame HeightRequest="45" Margin="-20,0,0,0" Padding="0" HasShadow="True" BorderColor="White" HorizontalOptions="FillAndExpand">
                 <Entry x:Name="EntryEmail" ToolTipProperties.Text="Zadajte e-mail" TextColor="Black" Margin="20,0,0,0" VerticalOptions="Center" Placeholder="E-Mail" Keyboard="Email" TextChanged="EntryEmail_TextChanged"/>
@@ -21,7 +21,7 @@
 
         <StackLayout Orientation="Horizontal">
             <Frame ZIndex="1" HasShadow="True" BorderColor="White" HeightRequest="56" WidthRequest="56" CornerRadius="28" HorizontalOptions="Fill">
-                <Image Source="lock_login.svg" HeightRequest="20" WidthRequest="20" />
+                <Image Source="lock_login.png" HeightRequest="20" WidthRequest="20" />
             </Frame>
             <Frame HeightRequest="45" Margin="-20,0,0,0" Padding="0" HasShadow="True" BorderColor="White" HorizontalOptions="FillAndExpand">
                 <Entry x:Name="EntryPassword" ToolTipProperties.Text="Zadajte heslo" TextColor="Black" Margin="20,0,0,0" VerticalOptions="Center" Placeholder="Heslo" IsPassword="True" TextChanged="EntryPassword_TextChanged"/>
@@ -30,7 +30,7 @@
 
         <StackLayout Orientation="Horizontal">
             <Frame ZIndex="1" HasShadow="True" BorderColor="White" HeightRequest="56" WidthRequest="56" CornerRadius="28" HorizontalOptions="Fill">
-                <Image Source="lock_login.svg" HeightRequest="20" WidthRequest="20" />
+                <Image Source="lock_login.png" HeightRequest="20" WidthRequest="20" />
             </Frame>
             <Frame HeightRequest="45" Margin="-20,0,0,0" Padding="0" HasShadow="True" BorderColor="White" HorizontalOptions="FillAndExpand">
                 <Entry x:Name="EntryPasswordConfirm" ToolTipProperties.Text="Zadajte heslo" TextColor="Black" Margin="20,0,0,0" VerticalOptions="Center" Placeholder="Potvrdenie hesla" IsPassword="True" TextChanged="EntryPasswordConfirm_TextChanged"/>
@@ -39,7 +39,7 @@
 
         <StackLayout Orientation="Horizontal">
             <Frame ZIndex="1" HasShadow="True" BorderColor="White" HeightRequest="56" WidthRequest="56" CornerRadius="28" HorizontalOptions="Fill">
-                <Image Source="slovakia_map.svg" HeightRequest="20" WidthRequest="20" />
+                <Image Source="slovakia_map.png" HeightRequest="20" WidthRequest="20" />
             </Frame>
             <Frame HeightRequest="45" Margin="-20,0,0,0" Padding="0" HasShadow="True" BorderColor="White" HorizontalOptions="FillAndExpand">
                 <Picker x:Name="RegionPicker" Title="Zvoľte región" Margin="20,0,0,0" TextColor="Black" VerticalOptions="Center" SelectedIndexChanged="RegionPicker_SelectedIndexChanged" />
